add fdqn rules
