# pkg/api/sgroups/api_grpc.pb.go
@@ -30,6 +30,7 @@ type SecGroupServiceClient interface {
 	GetSgSubnets(ctx context.Context, in *GetSgSubnetsReq, opts ...grpc.CallOption) (*GetSgSubnetsResp, error)
 	GetRules(ctx context.Context, in *GetRulesReq, opts ...grpc.CallOption) (*RulesResp, error)
 	FindRules(ctx context.Context, in *FindRulesReq, opts ...grpc.CallOption) (*RulesResp, error)
+	FindFdqnRules(ctx context.Context, in *FindFdqnRulesReq, opts ...grpc.CallOption) (*FdqnRulesResp, error)
 	GetSecGroupForAddress(ctx context.Context, in *GetSecGroupForAddressReq, opts ...grpc.CallOption) (*SecGroup, error)
 }
 
@@ -104,6 +105,15 @@ func (c *secGroupServiceClient) FindRules(ctx context.Context, in *FindRulesReq,
 	return out, nil
 }
 
+func (c *secGroupServiceClient) FindFdqnRules(ctx context.Context, in *FindFdqnRulesReq, opts ...grpc.CallOption) (*FdqnRulesResp, error) {
+	out := new(FdqnRulesResp)
+	err := c.cc.Invoke(ctx, "/hbf.v1.sgroups.SecGroupService/FindFdqnRules", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *secGroupServiceClient) GetSecGroupForAddress(ctx context.Context, in *GetSecGroupForAddressReq, opts ...grpc.CallOption) (*SecGroup, error) {
 	out := new(SecGroup)
 	err := c.cc.Invoke(ctx, "/hbf.v1.sgroups.SecGroupService/GetSecGroupForAddress", in, out, opts...)
@@ -124,6 +134,7 @@ type SecGroupServiceServer interface {
 	GetSgSubnets(context.Context, *GetSgSubnetsReq) (*GetSgSubnetsResp, error)
 	GetRules(context.Context, *GetRulesReq) (*RulesResp, error)
 	FindRules(context.Context, *FindRulesReq) (*RulesResp, error)
+	FindFdqnRules(context.Context, *FindFdqnRulesReq) (*FdqnRulesResp, error)
 	GetSecGroupForAddress(context.Context, *GetSecGroupForAddressReq) (*SecGroup, error)
 	mustEmbedUnimplementedSecGroupServiceServer()
 }
@@ -152,6 +163,9 @@ func (UnimplementedSecGroupServiceServer) GetRules(context.Context, *GetRulesReq
 }
 func (UnimplementedSecGroupServiceServer) FindRules(context.Context, *FindRulesReq) (*RulesResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method FindRules not implemented")
+}
+func (UnimplementedSecGroupServiceServer) FindFdqnRules(context.Context, *FindFdqnRulesReq) (*FdqnRulesResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method FindFdqnRules not implemented")
 }
 func (UnimplementedSecGroupServiceServer) GetSecGroupForAddress(context.Context, *GetSecGroupForAddressReq) (*SecGroup, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetSecGroupForAddress not implemented")
@@ -295,6 +309,24 @@ func _SecGroupService_FindRules_Handler(srv interface{}, ctx context.Context, de
 	return interceptor(ctx, in, info, handler)
 }
 
+func _SecGroupService_FindFdqnRules_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(FindFdqnRulesReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SecGroupServiceServer).FindFdqnRules(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/hbf.v1.sgroups.SecGroupService/FindFdqnRules",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SecGroupServiceServer).FindFdqnRules(ctx, req.(*FindFdqnRulesReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _SecGroupService_GetSecGroupForAddress_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(GetSecGroupForAddressReq)
 	if err := dec(in); err != nil {
@@ -347,6 +379,10 @@ var SecGroupService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "FindRules",
 			Handler:    _SecGroupService_FindRules_Handler,
+		},
+		{
+			MethodName: "FindFdqnRules",
+			Handler:    _SecGroupService_FindFdqnRules_Handler,
 		},
 		{
 			MethodName: "GetSecGroupForAddress",
